temp/unpackaged/objects/Job_Position__c.object
<CustomObject>
    <fields>
        <fullName>Applications_Count__c</fullName>
        <label>Applications Count</label>
        <summaryForeignKey>Job_Application__c.Job_Position__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Candidate_Level__c</fullName>
        <label>Candidate Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trainee</fullName>
                </value>
                <value>
                    <fullName>junior</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account of client for external position</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Positions</relationshipLabel>
        <relationshipName>Job_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Offices__c</fullName>
        <formula>CASE(Location__c,
&apos;Ukraine&apos;,&apos;Kyiv, Lviv, Ternopil&apos;,
&apos;USA&apos;,&apos;Chicago, Boston, New York&apos;,
&apos;Belarus&apos;,&apos;Minsk, Brest&apos;,
&apos;Poland&apos;,&apos;Wroclaw&apos;,&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Offices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>HR Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Positions</relationshipLabel>
        <relationshipName>Job_Positions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Ukraine</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximal_Asked_Salary__c</fullName>
        <label>Maximal Asked Salary</label>
        <summarizedField>Job_Application__c.Requested_Salary__c</summarizedField>
        <summaryForeignKey>Job_Application__c.Job_Position__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minimal_Asked_Salary__c</fullName>
        <label>Minimal Asked Salary</label>
        <summarizedField>Job_Application__c.Requested_Salary__c</summarizedField>
        <summaryForeignKey>Job_Application__c.Job_Position__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Due_Date__c</fullName>
        <label>Open Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Budget__c</fullName>
        <label>Position Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_Description__c</fullName>
        <label>Position Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Practice_Unit__c</fullName>
        <label>Practice Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Willing_to_work_remote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Willing to work remote?</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Positions</pluralLabel>
    <recordTypes>
        <fullName>External_Position</fullName>
        <active>true</active>
        <label>External Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Position</fullName>
        <active>true</active>
        <label>Internal Position</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Job_Position_is_US_Location</fullName>
        <active>true</active>
        <description>For Job Position is US Location, HR Manager Mailing Address should be US or United States or USA</description>
        <errorConditionFormula>AND(
ISPICKVAL(Location__c, &apos;USA&apos;),
NOT(OR(
HR_Manager__r.MailingCountry = &apos;US&apos;,
HR_Manager__r.MailingCountry = &apos;USA&apos;,
HR_Manager__r.MailingCountry = &apos;United States&apos;
))
)</errorConditionFormula>
        <errorDisplayField>HR_Manager__c</errorDisplayField>
        <errorMessage>HR Manager Mailing Address should be US or United States or USA</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Open_Due_Date_can_not_be_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Open_Due_Date__c  &lt;  TODAY(),
ISNEW())</errorConditionFormula>
        <errorDisplayField>Open_Due_Date__c</errorDisplayField>
        <errorMessage>Open Due Date  can not be  in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Record_Type_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordType.Name = &quot;External Position&quot;,
 ISBLANK(Client__c)
)</errorConditionFormula>
        <errorMessage>For External positions is requred to specify the Client</errorMessage>
    </validationRules>
</CustomObject>